scripts/nullness/wpi/urlae87f3aacb_kamanov_Drunkard_tgz-pJ8-ru_spbau_amanov_drunkard_ApplicationJ8.txt
../original/urlae87f3aacb_kamanov_Drunkard_tgz-pJ8-ru_spbau_amanov_drunkard_ApplicationJ8/src/ru/spbau/amanov/drunkard/GameObjects/Lantern.java:33: error: (dereference.of.nullable) $$ 1 $$ position $$ ( 768, 776 ) $$ dereference of possibly-null reference position
        int rowMin = Math.max(0, position.getRow() - lightRadius);
                                 ^
../original/urlae87f3aacb_kamanov_Drunkard_tgz-pJ8-ru_spbau_amanov_drunkard_ApplicationJ8/src/ru/spbau/amanov/drunkard/GameObjects/Beggar.java:17: error: (method.invocation) $$ 3 $$ tryToAppear() $$ @UnderInitialization(ru.spbau.amanov.drunkard.GameObjects.Beggar.class) @NonNull Beggar $$ @Initialized @NonNull Beggar $$ ( 462, 475 ) $$ call to tryToAppear() not allowed on the given receiver.
        tryToAppear();
                   ^
  found   : @UnderInitialization(ru.spbau.amanov.drunkard.GameObjects.Beggar.class) @NonNull Beggar
  required: @Initialized @NonNull Beggar
../original/urlae87f3aacb_kamanov_Drunkard_tgz-pJ8-ru_spbau_amanov_drunkard_ApplicationJ8/src/ru/spbau/amanov/drunkard/AbstractField.java:21: error: (method.invocation) $$ 3 $$ initField() $$ @UnderInitialization(ru.spbau.amanov.drunkard.AbstractField.class) @NonNull AbstractField $$ @Initialized @NonNull AbstractField $$ ( 509, 520 ) $$ call to initField() not allowed on the given receiver.
        initField();
                 ^
  found   : @UnderInitialization(ru.spbau.amanov.drunkard.AbstractField.class) @NonNull AbstractField
  required: @Initialized @NonNull AbstractField
../original/urlae87f3aacb_kamanov_Drunkard_tgz-pJ8-ru_spbau_amanov_drunkard_ApplicationJ8/src/ru/spbau/amanov/drunkard/AbstractField.java:50: error: (dereference.of.nullable) $$ 1 $$ pos $$ ( 1303, 1306 ) $$ dereference of possibly-null reference pos
        field[pos.getRow()][pos.getColumn()] = obj;
              ^
../original/urlae87f3aacb_kamanov_Drunkard_tgz-pJ8-ru_spbau_amanov_drunkard_ApplicationJ8/src/ru/spbau/amanov/drunkard/AbstractField.java:50: error: (assignment) $$ 2 $$ @UnknownInitialization(ru.spbau.amanov.drunkard.GameObjects.GameObject.class) @NonNull GameObject $$ @Initialized @NonNull GameObject $$ ( 1336, 1339 ) $$ incompatible types in assignment.
        field[pos.getRow()][pos.getColumn()] = obj;
                                               ^
  found   : @UnknownInitialization(ru.spbau.amanov.drunkard.GameObjects.GameObject.class) @NonNull GameObject
  required: @Initialized @NonNull GameObject
../original/urlae87f3aacb_kamanov_Drunkard_tgz-pJ8-ru_spbau_amanov_drunkard_ApplicationJ8/src/ru/spbau/amanov/drunkard/AbstractField.java:67: error: (dereference.of.nullable) $$ 1 $$ pos $$ ( 1740, 1743 ) $$ dereference of possibly-null reference pos
        return getObject(pos.getRow(), pos.getColumn());
                         ^
../original/urlae87f3aacb_kamanov_Drunkard_tgz-pJ8-ru_spbau_amanov_drunkard_ApplicationJ8/src/ru/spbau/amanov/drunkard/AbstractField.java:99: error: (dereference.of.nullable) $$ 1 $$ from $$ ( 2522, 2526 ) $$ dereference of possibly-null reference from
        positions.add(from.incColumn());
                      ^
../original/urlae87f3aacb_kamanov_Drunkard_tgz-pJ8-ru_spbau_amanov_drunkard_ApplicationJ8/src/ru/spbau/amanov/drunkard/Position.java:25: error: (dereference.of.nullable) $$ 1 $$ pos $$ ( 505, 508 ) $$ dereference of possibly-null reference pos
        row = pos.row;
              ^
../original/urlae87f3aacb_kamanov_Drunkard_tgz-pJ8-ru_spbau_amanov_drunkard_ApplicationJ8/src/ru/spbau/amanov/drunkard/Position.java:73: error: (dereference.of.nullable) $$ 1 $$ pos $$ ( 1309, 1312 ) $$ dereference of possibly-null reference pos
        return (row == pos.row && column == pos.column);
                       ^
../original/urlae87f3aacb_kamanov_Drunkard_tgz-pJ8-ru_spbau_amanov_drunkard_ApplicationJ8/src/ru/spbau/amanov/drunkard/PathHelper.java:38: error: (dereference.of.nullable) $$ 1 $$ pos $$ ( 805, 808 ) $$ dereference of possibly-null reference pos
        while (!pos.equals(from)) {
                ^
../original/urlae87f3aacb_kamanov_Drunkard_tgz-pJ8-ru_spbau_amanov_drunkard_ApplicationJ8/src/ru/spbau/amanov/drunkard/PathHelper.java:58: error: (argument) $$ 4 $$ arg0 $$ Queue.add $$ @Initialized @Nullable Position $$ @Initialized @NonNull Position $$ ( 1380, 1384 ) $$ incompatible argument for parameter arg0 of Queue.add.
        queue.add(from);
                  ^
  found   : @Initialized @Nullable Position
  required: @Initialized @NonNull Position
../original/urlae87f3aacb_kamanov_Drunkard_tgz-pJ8-ru_spbau_amanov_drunkard_ApplicationJ8/src/ru/spbau/amanov/drunkard/HexagonalField.java:15: error: (dereference.of.nullable) $$ 1 $$ from $$ ( 358, 362 ) $$ dereference of possibly-null reference from
        if (from.getRow() % 2 == 0) {
            ^
12 errors
